--- a/youbet/foundry.toml
+++ b/youbet/foundry.toml
@@ -4,3 +4,7 @@ out = "out"
 libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+[rpc_endpoints]
+linea-sepolia = "https://rpc.sepolia.linea.build"
+linea-mainnet = "https://rpc.linea.build"
