--- a/youbet/foundry.toml
+++ b/youbet/foundry.toml
@@ -3,7 +3,18 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+# for safety validations
+ffi = true
+ast = true
+build_info = true
+extra_output = ["storageLayout"]
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+remappings = [
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+    "@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/",
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts-upgradeable/lib/openzeppelin-contracts/contracts/",
+]
 
 [rpc_endpoints]
 linea-sepolia = "https://rpc.sepolia.linea.build"
