fix: switch to etherscan API for BSC verfication
Signed-off-by: hunknownz <klercc37@gmail.com>

--- a/youbet/.env.example
+++ b/youbet/.env.example
@@ -1,2 +1,3 @@
 PRIVATE_KEY=<your private key, begin with 0x, example: 0xae82xxxxxxxx>
 PROXY_ADDRESS=0x9a7exxxxx
+ETHERSCAN_API_KEY=<your etherscan api key>
